--- a/ui.css
+++ b/ui.css
@@ -2,6 +2,10 @@
     font-family: Archivo;
     src: url(Archivo.ttf);
   }
+  
+  .left {
+  font-family: sans-serif;
+  }
 
   ::-webkit-scrollbar {
     width: 10px;
