--- a/ui.css
+++ b/ui.css
@@ -3,6 +3,12 @@
     src: url(Archivo.ttf);
   }
   
+  @font-face {
+    font-family: Nunito;
+    src: url(nunito.ttf);
+  }
+  
+
   .left {
   font-family: sans-serif;
   }
@@ -35,4 +41,123 @@
 
 .navbar-menu a:hover {
   text-decoration: underline !important;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  color: #ffffff;
+  font-size: 25px;
+  background-color: #121212;
+  overflow-x: hidden;
+  position: relative;
+}
+
+body::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("/background.jpg");
+  background-size: 100vw;
+  background-position: center;
+  filter: blur(10px); /* Adjust the blur intensity here */
+  z-index: -1;
+}
+
+.navbar {
+display: flex;
+align-items: center; /* Vertically center the items */
+height: 7vh;
+width: 100%;
+justify-content: flex-end; /* Align items to the right */
+padding: 0 20px; /* Padding to keep the navbar consistent */
+z-index: 10; /* Make navbar items visible */
+position: fixed;
+background-color: rgba(0, 0, 0, 0.7); /* Slight background for navbar */
+}
+
+.navbar a {
+color: white;
+text-decoration: none;
+padding: 0 15px;
+display: inline-block;
+margin-left: 20px; /* Add space between each navbar item */
+font-family: "Nunito", sans-serif;
+font-weight: bold;
+}
+
+
+.centre {
+  position: absolute; /* Position absolutely to the top */
+  top: 0; /* Directly below navbar */
+  left: 0;
+  width: 100%;
+  height: calc(8vh + 200px + 2vh + 6vh); /* Adjust height as needed */
+  text-align: center;
+  font-family: "Archivo", sans-serif;
+  font-size: 100px;
+  font-weight: normal;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start; /* Align text closer to the top */
+  padding-top: 20px; /* Adjust this to bring the text closer to the top */
+}
+
+.centre::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: url('https://ch-education-nsw.github.io/Engineering-2025-1-Propeller-Dragster/background-1.png') no-repeat center center/cover;
+  filter: blur(4px);
+  z-index: -1;
+}
+
+.centre p {
+  position: relative;
+  z-index: 1;
+  text-shadow: 0 4px 4px black;
+  margin-top: 7vh;
+  font-size: 100px; /* Decrease the font size for more space */
+}
+
+p.main {
+  margin: 20px;
+  text-align: center;
+  font-size: 20px;
+  font-family: "Nunito", sans-serif;
+  font-weight: bold;
+}
+
+.navbar-content {
+  margin-right: 30px;
+  font-family: sans-serif;
+}
+
+.left {
+  left: 0;
+  position: absolute;
+}
+
+.subtitle {
+  margin: 20px;
+  font-size: 40px;
+  text-align: center;
+  font-family: "Nunito", sans-serif;
+  font-weight: bold;
+}
+
+img {
+  position: relative;
+  width: 800px;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-bottom: 20px;
+  border-radius: 5px;
 }
