--- a/ui.css
+++ b/ui.css
@@ -60,7 +60,7 @@ body::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("/background.jpg");
+  background-image: url("background.jpg");
   background-size: 100vw;
   background-position: center;
   filter: blur(10px); /* Adjust the blur intensity here */
